# ai-chatbot

./: README.md
backend/: .env.example  .gitignore  README.md  agent.py  agent_service.py  app.py  chat_history.py  configuration.py  constants.py  graph.py  langgraph.json  main.py  prompts.py  pyproject.toml  state.py  test.ipynb  tools.py  vectory_store.py
web/: .env.example  package.json  vite.config.ts
web/src/lib/actions/: autoHeight.ts
web/src/lib/components/: LinkRenderer.svelte  ThemeToggle.svelte
web/src/lib/models/: index.ts  message.ts
web/src/routes/: +page.svelte
web/src/routes/about/: +server.ts
