[project]
name = "backend"
version = "0.1.0"
description = "AI Chatbot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.26",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "uvicorn>=0.34.3",
]
